--- a/style.less
+++ b/style.less
@@ -13,12 +13,7 @@
         grid-template-columns: auto 50% auto; // Columnas automaticas
     }
     &.example-4 {
-        grid-template-areas: 
-         'item-1 item-1 item-1 item-1 item-1 item-1'
-         'item-2 item-3 item-3 item-3 item-4 item-4' 
-         'item-2 item-5 item-5 item-6 item-6 item-6'
-         'item-2 item-7 item-7 item-6 item-6 item-6'
-         'item-8 item-8 item-8 item-9 item-9 item-9';
+        grid-template-areas: 'item-1 item-1 item-1 item-1 item-1 item-1' 'item-2 item-3 item-3 item-3 item-4 item-4' 'item-2 item-5 item-5 item-6 item-6 item-6' 'item-2 item-7 item-7 item-6 item-6 item-6' 'item-8 item-8 item-8 item-9 item-9 item-9';
         .item-1 {
             grid-area: item-1;
         }
@@ -36,6 +31,19 @@
         }
         .item-6 {
             grid-area: item-6;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-gap: 10px;
+            padding: 10px;
+            &>div {
+                background-color: rgba(0, 0, 0, .2);
+                text-align: center;
+                padding: 20px 0;
+                font-size: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
         .item-7 {
             grid-area: item-7;
