--- a/style.css
+++ b/style.css
@@ -33,6 +33,19 @@
 }
 .grid-container.example-4 .item-6 {
   grid-area: item-6;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+  padding: 10px;
+}
+.grid-container.example-4 .item-6 > div {
+  background-color: rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .grid-container.example-4 .item-7 {
   grid-area: item-7;
