--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.text-align {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .grid-container {
   display: grid;
   grid-gap: 10px;
@@ -33,19 +38,11 @@
 }
 .grid-container.example-4 .item-6 {
   grid-area: item-6;
-  display: grid;
   grid-template-columns: auto auto auto;
-  grid-gap: 10px;
   padding: 10px;
 }
 .grid-container.example-4 .item-6 > div {
-  background-color: rgba(0, 0, 0, 0.2);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .grid-container.example-4 .item-7 {
   grid-area: item-7;
@@ -56,7 +53,7 @@
 .grid-container.example-4 .item-9 {
   grid-area: item-9;
 }
-.grid-container > div {
+.grid-container div {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
   padding: 20px 0;
