--- a/style.less
+++ b/style.less
@@ -1,3 +1,9 @@
+
+.text-align{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .grid-container {
     display: grid;
     grid-gap: 10px;
@@ -13,7 +19,12 @@
         grid-template-columns: auto 50% auto; // Columnas automaticas
     }
     &.example-4 {
-        grid-template-areas: 'item-1 item-1 item-1 item-1 item-1 item-1' 'item-2 item-3 item-3 item-3 item-4 item-4' 'item-2 item-5 item-5 item-6 item-6 item-6' 'item-2 item-7 item-7 item-6 item-6 item-6' 'item-8 item-8 item-8 item-9 item-9 item-9';
+        grid-template-areas: 
+        'item-1 item-1 item-1 item-1 item-1 item-1' 
+        'item-2 item-3 item-3 item-3 item-4 item-4'
+        'item-2 item-5 item-5 item-6 item-6 item-6' 
+        'item-2 item-7 item-7 item-6 item-6 item-6'
+        'item-8 item-8 item-8 item-9 item-9 item-9';
         .item-1 {
             grid-area: item-1;
         }
@@ -31,18 +42,10 @@
         }
         .item-6 {
             grid-area: item-6;
-            display: grid;
             grid-template-columns: auto auto auto;
-            grid-gap: 10px;
             padding: 10px;
             &>div {
-                background-color: rgba(0, 0, 0, .2);
-                text-align: center;
-                padding: 20px 0;
-                font-size: 30px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                background-color: rgba(0, 0, 0, .1);
             }
         }
         .item-7 {
@@ -55,7 +58,7 @@
             grid-area: item-9;
         }
     }
-    &>div {
+    div {
         background-color: rgba(255, 255, 255, 0.8);
         text-align: center;
         padding: 20px 0;
